tests/fixtures/invalid/float_add_bytes.py
# Cannot add Float and Bytes
x: float = 1.0 + b"hello"
